force-app/main/default/objects/SecurityInboundTokenUsed__c/SecurityInboundTokenUsed__c.object-meta.xml
<CustomObject>
    <description>JTI(JSON Token ID) - 사용된 인바운드 토큰 재사용 방지. eventKey+timestamp 조합을 저장하여 한 번 사용된 링크의 재클릭 차단.</description>
    <label>Security Inbound Token Used</label>
    <nameField>
        <displayFormat>SIT-{000000}</displayFormat>
        <label>Token Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>