force-app/main/default/objects/SecurityInboundTokenUsed__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>해당 토큰으로 실행된 보안 조치 종류(예: KILL_SESSION, FREEZE_USER 등)</description>
    <label>Action Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>