force-app/main/default/objects/SecurityInboundTokenUsed__c/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <description>이벤트 키 (userId:policyCode:resourceId:timeKey)</description>
    <label>Event Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>