force-app/main/default/objects/SecurityInboundTokenUsed__c/fields/TokenTimestamp__c.field-meta.xml
<CustomField>
    <fullName>TokenTimestamp__c</fullName>
    <description>토큰의 t 파라미터(Unix 초). eventKey와 조합하여 JTI 고유 식별.</description>
    <label>Token Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>