force-app/main/default/objects/SecurityInboundTokenUsed__c/fields/UsedAt__c.field-meta.xml
<CustomField>
    <fullName>UsedAt__c</fullName>
    <description>토큰 사용 시각 (감사용)</description>
    <label>Used At</label>
    <type>DateTime</type>
</CustomField>